keycloack/kubernetes/keycloak-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: keycloak-https
spec:
  tls:
    - hosts:
      - keycloak.example.com
      secretName: ingress-keycloak
  rules:
  - host: keycloak.example.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: keycloak-http
            port:
              number: 80
